# gearboxplus

./: .clang-format  CMakeLists.txt  README.md  a04presets.csv  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  resources.qrc
icons/: cil-gauge.xpm
src/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui  resources.qrc
src/cores/: a04core.cpp  a04core.hpp  a06core.cpp  a06core.hpp  basecore.hpp  corefactory.cpp  corefactory.hpp
